# fluentwhisper

./: .env.example  .gitignore  APP_ARCHITECTURE_SUMMARY.md  APP_EXPLORATION_INDEX.md  APP_FEATURES_OVERVIEW.md  BACKLOG.md  BIDIRECTIONAL_TRANSLATIONS.md  CLAUDE.md  CLOUD_TRANSCRIPTION_PLAN.md  COMPREHENSIVE_APP_OVERVIEW.md  CONTRIBUTING.md  DARK_MODE_GUIDE.md  DESKTOP_AUTH_SETUP.md  DEV_AUTH_IMPLEMENTATION.md  FIXES_APPLIED.md  GIT_WORKFLOW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_MINIMAL.md  IMPLEMENTATION_PLAN_REVISED.md  IMPLEMENTATION_SUMMARY.md  IMPORT_ENHANCEMENT_PLAN.md  KAIKKI_BUG_FIX.md  KAIKKI_DATA_STRUCTURE.md  LANGUAGE_SYSTEM_PLAN.md  LICENSE  ONBOARDING_PLAN.md  POSTHOG_SETUP.md  PRODUCTION_RELEASE_PLAN.md  PROGRESS.md  README.md  RELEASE_READINESS.md  ROADMAP.md  SECURITY_AUDIT_CLOUD_TRANSCRIPTION.md  SYNC_ANALYSIS.md  TODO.md  UPDATES_AND_DISTRIBUTION.md  build_log.txt  build_log_fixed.txt  build_log_normalized.txt  build_log_with_missing_lemmas.txt  (+15 more)
.github/workflows/: release.yml
docs/: NOTARIZATION.md  TRANSLATION_ABSTRACTION.md  WHISPER_MODEL_RECOMMENDATIONS.md
mockups/analytics_dashboard/: code.html
mockups/history_manager/: code.html
mockups/import_content_page/: code.html
mockups/language_learning_dashboard_2/: code.html
mockups/recording_interface_2/: code.html
mockups/session_detail_view/: code.html
mockups/text_library/: code.html
mockups/vocabulary_center/: code.html
public/: language-packs.json
scripts/: LANGUAGE_PACK_RELEASE.md  README.md  build_concepts_db.py  build_lemmas.py  build_translations.py  build_translations_bidirectional.py  fresh-start.sh  release-language-packs.sh  test-deep-link.mjs  update-manifest-urls.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  user.db
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  cleanup.rs  dictionaries.rs  langpack.rs  language_packs.rs  mod.rs  models.rs  recording.rs  sessions.rs  stats.rs  system.rs  text_library.rs  vocabulary.rs
src-tauri/src/db/: langpack.rs  mod.rs  user.rs
src-tauri/src/services/: cleanup.rs  language_packs.rs  lemmatization.rs  mod.rs  model_download.rs  oauth_server.rs  sessions.rs  stats.rs  text_library.rs  translation.rs  vocabulary.rs
src-tauri/src/services/recording/: mod.rs  recorder.rs  wav_writer.rs
src-tauri/src/services/transcription/: error.rs  mod.rs  whisper.rs
src-tauri/src/services/translation/: concept_provider.rs  mod.rs  pairwise_provider.rs  provider.rs
src/components/: AudioPlayer.tsx  AuthModal.tsx  DailyGoalModal.tsx  DevAuthPanel.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  FirstRunCheck.tsx  GlobalDownloadToast.tsx  LanguagePackBanner.tsx  LoginScreen.tsx  ModelSelectionGuard.tsx  PremiumFeature.tsx  PremiumInfoModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UpdateDialog.tsx  WaveformVisualizer.tsx
src/components/dashboard/: NewWords.tsx  PracticeCalendar.tsx  QuickStartBanner.tsx  RecentSessions.tsx  StatCard.tsx  index.ts
src/components/dictionary/: DictionaryButton.tsx  DictionaryViewer.tsx  index.ts
src/components/language-packs/: DownloadProgress.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/read-aloud/: HighlightedText.tsx  TranslationTooltip.tsx
src/components/record/: SessionTypeInfo.tsx
src/components/settings/: AboutSettingsSection.tsx  AudioSettingsSection.tsx  DeveloperSettingsSection.tsx  GeneralSettingsSection.tsx  LanguagePackSection.tsx  SettingsSidebar.tsx  (+5 more)
src/constants/: languages.ts
src/hooks/: useUpdater.ts
src/lib/: supabase.ts  toast.ts
src/services/: analytics.ts
src/stores/: downloadStore.ts  recordingStore.ts  settingsStore.ts
src/types/: dictionary.ts  language-packs.ts
src/utils/: dailyGoalState.ts  dateFormatting.ts  sessionStats.ts
supabase/migrations/: 20250130_create_transcription_usage.sql
todo/: SESSION_DETAIL_FUTURE.md
(+100 files in other folders)
