[package]
name = "fluent-diary"
version = "0.1.0"
description = "Privacy-first speech practice app with offline transcription"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"      # HTTP client for downloads
tauri-plugin-fs = "2.0"        # File system operations
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }  # For streaming downloads
futures-util = "0.3"           # For async stream handling

# Audio recording and transcription
cpal = "0.16.0"                # Cross-platform audio capture
hound = "3.5"                  # WAV file reading/writing
rubato = "0.15"                # Audio resampling to 16kHz for Whisper
whisper-rs = "0.15"            # Local Whisper transcription (whisper.cpp bindings)
thiserror = "2.0"              # Better error handling
tempfile = "3.8"               # Temporary file handling

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
