[package]
name = "fluent-diary"
version = "1.1.0"
description = "Privacy-first speech practice app with offline transcription"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"      # HTTP client for downloads
tauri-plugin-fs = "2.0"        # File system operations
tauri-plugin-dialog = "2.0"    # File dialogs for text import
tauri-plugin-deep-link = "2.0" # Deep link handling for OAuth callbacks
tauri-plugin-updater = "2.0"   # Auto-update functionality
tauri-plugin-process = "2.0"   # Process management for app restart
keyring = "3.6"               # Secure credential storage (Keychain on macOS, Credential Manager on Windows)
open = "5.0"                  # Open URLs in default browser
url = "2.5"                   # URL parsing for deep links
urlencoding = "2.1"           # URL encoding for OAuth parameters
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }  # For streaming downloads and web scraping
futures-util = "0.3"           # For async stream handling

# Text import - multi-format parsing
pdf-extract = "0.7"            # PDF text extraction
epub = "2.0"                   # EPUB e-book parsing
scraper = "0.17"               # HTML parsing for web scraping

# Audio recording and transcription
cpal = "0.16.0"                # Cross-platform audio capture
hound = "3.5"                  # WAV file reading/writing
rubato = "0.15"                # Audio resampling to 16kHz for Whisper
whisper-rs = "0.15"            # Local Whisper transcription (whisper.cpp bindings)
thiserror = "2.0"              # Better error handling
tempfile = "3.8"               # Temporary file handling
sysinfo = "0.32"               # System information (CPU, RAM) for model recommendations
async-trait = "0.1.89"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
